# seqsetvis 0.99.19

* added viewGRangesWinSummary_dt() -  allows summary statistic to be appled over
windows in contrast to sampling method. allows qgr to be varying width.
* renamed viewGRangesWindowed_dt() to viewGRangesWinSample_dt()

# seqsetvis 0.99.18

* updated package title
* updated vignette title

# seqsetvis 0.99.17

* fetch functions, _dt versions removed and param return_data.table = FALSE
added
* refactoring to encapsulate fetch utility functions shared by bw and bam

# seqsetvis 0.99.13

* added bamFetch*
* refactored bwFetch* to use viewGRangesWindowed_dt, same as bamFetch*
* ssvSignalClustering and Heatmap bug fixes related to hardcoded data.table
variables
* restructured and renamed extdata to be cleaner/more intuitive.

# seqsetvis 0.99.12

* small changes to clear warning for Bioc acceptance.

# seqsetvis 0.99.10

* fewer and smaller vignette figures
* ggellipse exported with documentation
* ssvSignalHeatmap calcs better xticks
* ssvFeatureBinaryHeatmap true_color and false_color params added to allow
color control
* ssvFeatureVenn and Euler params unified
* ssvFeatureBars has bar_color param like that of venn and euler

# seqsetvis 0.99.9

* vigentte - some plots reduced in size and dpi reduced to save space.
* ssvFeatureVenn and Euler refactored to use common internal ggellipse function
for
consistency.
* ssvBinarizeHeatmap cleaned up plot output and changed default to
raster_approximation = FALSE

# seqsetvis 0.99.8

* fetch* now automatically calculate and apply a fixed width.
* BiocFileCache used for all URL resources in vignette
* vigentte uses cases for CTCF peak overlap and for chromHMM states complete

# seqsetvis 0.99.7

* fixed examples error for ssvSignalLineplot
* addressed BioC notes for seq_len instead of 1:x
* addressed BioC notes for vapply instead of sapply

# seqsetvis 0.99.5

* added easyLoad_narrowPeak() and easyLoad_broadPeak()
* added ssvFactorizeMembTable() for converting membership table to factor