@@ -4,7 +4,8 @@
 \alias{fetchWindowedBigwig}
 \title{Fetch values from a bigwig appropriate for heatmaps etc.}
 \usage{
-fetchWindowedBigwig(bw_file, qgr, win_size = 50, x0 = c("left",
+fetchWindowedBigwig(bw_file, qgr, win_size = 50, win_method = c("sample",
+  "summary")[1], summary_FUN = stats::weighted.mean, x0 = c("left",
   "left_unstranded", "center", "center_unstranded")[3],
   return_data.table = FALSE)
 }
@@ -15,6 +16,14 @@ fetchWindowedBigwig(bw_file, qgr, win_size = 50, x0 = c("left",
 interval should be identical and evenly divisible by \code{win_size}.}
 
 \item{win_size}{The window size that evenly divides widths in \code{qgr}.}
+
+\item{win_method}{character.  one of c("sample", "summary").  Determines
+if \code{\link{viewGRangesWinSample_dt}} or
+\code{\link{viewGRangesWinSummary_dt}} is used to represent each region in
+qgr.}
+
+\item{summary_FUN}{function.  only relevant if win_method is "summary".
+passed to \code{\link{viewGRangesWinSummary_dt}}.}
 
 \item{x0}{character, one of c("center", "center_unstranded",
 "left", "left_unstranded")}
