@@ -2,6 +2,7 @@
 library(seqsetvis)
 library(GenomicRanges)
 library(testthat)
+library(data.table)
 
 qgr = CTCF_in_10a_overlaps_gr[1:5]
 strand(qgr) = c("+", "-", "-", "+", "-")
@@ -11,60 +12,6 @@ strand(qgr) = c("+", "-", "-", "+", "-")
 bam_file = system.file("extdata/test.bam", package = "seqsetvis")
 
 bam_gr = fetchBam(bam_file, qgr)
-
-#sampling
-test_that("viewGRangesWinSample_dt center", {
-    dt = viewGRangesWinSample_dt(bam_gr, qgr, window_size = 50, x0 = "center")
-    # dt$group = "stranded"
-    dt_us = viewGRangesWinSample_dt(bam_gr, qgr, window_size = 50, x0 = "center_unstranded")
-    # dt_us$group = "unstranded"
-    # ssvSignalLineplot(rbind(dt, dt_us), sample_ = "id", color_ = "strand", group_ = "group")
-    expect_true(all(dt[strand == "+"][order(x)]$y == dt_us[strand == "+"][order(x)]$y))
-    expect_false(all(dt[strand == "-"][order(x)]$y == dt_us[strand == "-"][order(x)]$y))
-    expect_false(all(dt$x > 0))
-    expect_false(all(dt$x < 0))
-    expect_false(all(dt_us$x > 0))
-    expect_false(all(dt_us$x < 0))
-})
-
-test_that("viewGRangesWinSample_dt left", {
-    dt = viewGRangesWinSample_dt(bam_gr, qgr, window_size = 50, x0 = "left")
-    # dt$group = "stranded"
-    dt_us = viewGRangesWinSample_dt(bam_gr, qgr, window_size = 50, x0 = "left_unstranded")
-    # dt_us$group = "unstranded"
-    # ssvSignalLineplot(rbind(dt, dt_us), sample_ = "id", color_ = "strand", group_ = "group")
-    expect_equal(dt[strand == "+"][order(x)]$y, dt_us[strand == "+"][order(x)]$y)
-    expect_failure(expect_equal(dt[strand == "-"][order(x)]$y, dt_us[strand == "-"][order(x)]$y))
-    expect_true(all(dt$x > 0))
-    expect_true(all(dt_us$x > 0))
-})
-
-#sumamry
-test_that("viewGRangesWinSummary_dt center", {
-    dt = viewGRangesWinSummary_dt(bam_gr, qgr, n_tiles = 10, x0 = "center")
-    # dt$group = "stranded"
-    dt_us = viewGRangesWinSummary_dt(bam_gr, qgr, n_tiles = 10, x0 = "center_unstranded")
-    # dt_us$group = "unstranded"
-    # ssvSignalLineplot(rbind(dt, dt_us), sample_ = "id", color_ = "strand", group_ = "group")
-    expect_equal(dt[strand == "+"][order(x)]$y, dt_us[strand == "+"][order(x)]$y)
-    expect_failure(expect_equal(dt[strand == "-"][order(x)]$y, dt_us[strand == "-"][order(x)]$y))
-    expect_false(all(dt$x > 0))
-    expect_false(all(dt$x < 0))
-    expect_false(all(dt_us$x > 0))
-    expect_false(all(dt_us$x < 0))
-})
-
-test_that("viewGRangesWinSummary_dt left", {
-    dt = viewGRangesWinSummary_dt(bam_gr, qgr, n_tiles = 10, x0 = "left")
-    # dt$group = "stranded"
-    dt_us = viewGRangesWinSummary_dt(bam_gr, qgr, n_tiles = 10, x0 = "left_unstranded")
-    # dt_us$group = "unstranded"
-    # ssvSignalLineplot(rbind(dt, dt_us), sample_ = "id", color_ = "strand", group_ = "group")
-    expect_equal(dt[strand == "+"][order(x)]$y, dt_us[strand == "+"][order(x)]$y)
-    expect_failure(expect_equal(dt[strand == "-"][order(x)]$y, dt_us[strand == "-"][order(x)]$y))
-    expect_true(all(dt$x > 0))
-    expect_true(all(dt_us$x > 0))
-})
 
 #test varying size regions
 vgr = qgr
@@ -106,12 +53,12 @@ test_that("can fetch bamList summary", {
     bams_summary_dt = fetchWindowedBamList(bams, vgr, win_method = "summary")
     expect_lte(max(abs(range(bams_summary_dt$x))), .5)
     bams_summary_dt10 = fetchWindowedBamList(bams, vgr, win_method = "summary",
-                                             win_size = 10)
-    bams_summary_dtFUN = fetchWindowedBamList(bams, vgr, win_method = "summary",
+                                             win_size = 10, return_data.table = TRUE)
+    bams_summary_grFUN = fetchWindowedBamList(bams, vgr, win_method = "summary",
                                               summary_FUN = function(x, w){min(w)})
-    expect_false(all(bams_summary_dt$y == bams_summary_dtFUN$y))
+    expect_false(all(bams_summary_dt$y == bams_summary_grFUN$y))
     expect_true(all(bams_summary_dt10[, .N, by = id]$N == 10*length(bams)))
-    expect_true(all(bams_summary_dt[, .N, by = id]$N == 50*length(bams)))
+    expect_true(all(as.data.table(bams_summary_dt)[, .N, by = id]$N == 50*length(bams)))
 })
 
 bigwig_file = system.file("extdata/MCF10A_CTCF_FE_random100.bw", package = "seqsetvis", mustWork = TRUE)
@@ -143,12 +90,12 @@ test_that("can fetch bigwigList summary", {
     bigwigs_summary_dt = fetchWindowedBigwigList(bigwigs, vgr, win_method = "summary")
     expect_lte(max(abs(range(bigwigs_summary_dt$x))), .5)
     bigwigs_summary_dt10 = fetchWindowedBigwigList(bigwigs, vgr, win_method = "summary",
-                                             win_size = 10)
+                                             win_size = 10, return_data.table = TRUE)
     bigwigs_summary_dtFUN = fetchWindowedBigwigList(bigwigs, vgr, win_method = "summary",
                                               summary_FUN = function(x, w){min(w)})
     expect_false(all(bigwigs_summary_dt$y == bigwigs_summary_dtFUN$y))
     expect_true(all(bigwigs_summary_dt10[, .N, by = id]$N == 10*length(bigwigs)))
-    expect_true(all(bigwigs_summary_dt[, .N, by = id]$N == 50*length(bigwigs)))
+    expect_true(all(as.data.table(bigwigs_summary_dt)[, .N, by = id]$N == 50*length(bigwigs)))
 })
 
 # fetchBam and fetchBw params
